# bastille-chain

./: .credo.exs  .cursorrules  .editorconfig  .gitignore  ARCHITECTURE_REVIEW.md  CONVENTIONS.md  Cargo.toml  IMPROVEMENT_PLAN.md  MINING_REWARD_IMPLEMENTATION.md  README.md  mix.exs
config/: config.exs  node1.exs  node2.exs  node3.exs  test.exs
docker/: Dockerfile  README.md  deploy.sh  docker-compose.yml
docs/: key_derivation_design.md
lib/: bastille.ex
lib/bastille/: application.ex
lib/bastille/features/api/: rpc.ex
lib/bastille/features/block/: block.ex  block_converter.ex
lib/bastille/features/chain/: chain.ex  orphan_manager.ex  reorg_search.ex  transaction_validator.ex
lib/bastille/features/consensus/: behaviour.ex  engine.ex
lib/bastille/features/mining/: mining.ex  mining_coordinator.ex  proof_of_work.ex
lib/bastille/features/tokenomics/: coinbase_maturity.ex  conversions.ex  token.ex
lib/bastille/features/transaction/: mempool.ex  transaction.ex  transaction_converter.ex
lib/bastille/shared/: address.ex  constants.ex  crypto.ex  crypto_utils.ex  mnemonic.ex  seed.ex  types.ex
native/bastille_crypto/: Cargo.toml  README.md
native/bastille_crypto/src/: lib.rs
priv/test/: kat_keys.json
scripts/: start_node1.bat  start_node1.sh  start_node2.bat  start_node2.sh  start_node3.bat  start_node3.sh
test/: test_helper.exs
test/bastille/shared/: address_test.exs  constants_test.exs  crypto_test.exs  crypto_utils_test.exs  key_derivation_kat_test.exs  mnemonic_test.exs  seed_test.exs  types_test.exs
test/support/: test_helper.ex
(+53 files in other folders)
