[package]
name = "bastille_crypto"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "bastille_crypto"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
# Post-quantum cryptography via pqcrypto (wrapper autour de PQClean)
pqcrypto = "0.18"
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
pqcrypto-falcon = "0.4"
pqcrypto-sphincsplus = "0.7"
# Pour la génération de clés aléatoires
rand = "0.8"
# Hash Blake3 pour le mining et les signatures
blake3 = "1.3"
# For global cache in deterministic key generation
lazy_static = "1.4"
# For encoding cache file names
hex = "0.4"
