[package]
name = "bastille_crypto"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "bastille_crypto"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
# Post-quantum signatures, pure-Rust FIPS-aligned crates with seed-based keygen
ml-dsa = "0.1.0"
slh-dsa = "0.1.0"
fn-dsa = "0.3.0"
signature = "=2.3.0-pre.4"
# Deterministic CSPRNG for Falcon seeded keygen + OS RNG for randomized signing
rand = "0.8"
rand_chacha = "0.3"
# Blake3 for mining hashes + SPHINCS sub-seed expansion
blake3 = "1.3"
